add step before save !

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -39,6 +39,10 @@ signlevel.simple=Signature simple (calligraphique)
 signlevel.advanced=Signature avanc\u00E9e (certificat n\u00E9cessaire)
 signlevel.qualified=Signature qualifi\u00E9e (certificat n\u00E9cessaire)
 
+signlevelShort.simple=Simple
+signlevelShort.advanced=Avanc\u00E9e
+signlevelShort.qualified=Qualifi\u00E9e
+
 signbook.newpagetype.none=Non
 signbook.newpagetype.onBegin=Au debut du document
 signbook.newpagetype.onEnd=A la fin du document
