add status in search

--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -55,6 +55,27 @@ signbook.status.refused=Refus\u00E9
 signbook.status.deleted=\u00C0 la corbeille
 signbook.status.exported=Export\u00E9
 signbook.status.completed=Termin\u00E9
+
+signbook.status.color.uploading=secondary
+signbook.status.color.draft=secondary
+signbook.status.color.pending=warning
+signbook.status.color.checked=success
+signbook.status.color.signed=success
+signbook.status.color.refused=danger
+signbook.status.color.deleted=danger
+signbook.status.color.exported=success
+signbook.status.color.completed=success
+
+signbook.status.icon.uploading=fi-rr-cloud-upload-alt
+signbook.status.icon.draft=fi-rr-file-exclamation
+signbook.status.icon.pending=fi-rr-pending
+signbook.status.icon.checked=fi-rr-check-circle
+signbook.status.icon.signed=fi-rr-file-signature
+signbook.status.icon.refused=fi-rr-cross-circle
+signbook.status.icon.deleted=fi-rr-trash
+signbook.status.icon.exported=fi-rr-file-export
+signbook.status.icon.completed=fi-rr-flag
+
 signbook.archivestatus.none=
 signbook.archivestatus.archived=Archiv\u00E9
 signbook.archivestatus.cleaned=Archiv\u00E9 (et purg\u00E9)
