--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -37,7 +37,7 @@ signwith.autoCert=Certificat li\u00E9 \u00E0 l\u2019\u00E9tape du circuit
 
 signlevel.simple=Signature simple (calligraphique)
 signlevel.advanced=Signature avanc\u00E9e (certificat n\u00E9cessaire)
-signlevel.qualified=Signature qualifi\u00E9e (certificat n\u00E9cessaire)
+signlevel.qualified=Signature qualifi\u00E9e (certificat eIDas n\u00E9cessaire)
 
 signlevelShort.simple=Simple
 signlevelShort.advanced=Avanc\u00E9e
